# Nimbus-Commerce-Platform

./: .dockerignore  .editorconfig  .env.docker  .env.example  .env.test.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.pre-commit-hooks/: block-prod-urls.py  conventional-commits.py
.pre-commit-hooks/check-nimbus-env/: README.md  hooks.py  hooks.yaml
alembic/: env.py
docker/postgres/: init.sql
docs/: CHANGELOG.md  COMMIT_MESSAGES.md
scripts/: check_env.py  load_env.sh  smoke_app.py
src/: __init__.py  main.py
src/core/: __init__.py  cache.py  config.py  consumer.py  database.py  dedupe.py  exceptions.py  messaging.py  protocols.py  telemetry.py
src/modules/: __init__.py
src/modules/gateway/: __init__.py  abuse.py  security.py
src/modules/inventory/: __init__.py  models.py  services.py
src/modules/orders/: __init__.py  consumer.py  models.py  services.py
src/modules/payments/: __init__.py  models.py  services.py
src/modules/users/: __init__.py  models.py  services.py
src/workers/: __init__.py  outbox_relay.py
tests/: __init__.py  conftest.py  test_abuse.py  test_dedupe.py  test_inventory.py  test_orders.py  test_outbox_relay.py  test_payments.py  test_security.py  test_smoke.py
tests/fakes/: __init__.py  fake_redis.py
tests/integration/: test_outbox_relay.py  test_payments_db.py  test_saga_e2e.py
