[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nimbus"
version = "0.1.0"
description = "Nimbus Commerce Platform — production-grade modular monolith backend."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Nimbus Platform Team" }]
keywords = ["commerce", "fastapi", "kafka", "modular-monolith"]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
  "fastapi~=0.115.6",
  "uvicorn[standard]~=0.32.1",
  "sqlalchemy[asyncio]~=2.0.36",
  "asyncpg~=0.30.0",
  "alembic~=1.14.0",
  "pydantic~=2.10.4",
  "pydantic-settings~=2.7.0",
  "redis[hiredis]~=5.2.1",
  "aiokafka~=0.12.0",
  "structlog~=24.4.0",
  "pybreaker~=1.2.0",
  "argon2-cffi~=23.1.0",
  "orjson~=3.10.12",
  "httpx~=0.28.1",
  "python-dotenv~=1.0.1",
  "PyJWT[crypto]~=2.10.1",
]

[project.optional-dependencies]
dev = [
  "pytest~=8.3.4",
  "pytest-asyncio~=0.25.0",
  "pytest-cov~=6.0.0",
  "mypy~=1.13.0",
  "ruff~=0.8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers", "--strict-config"]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
  "integration: requires real postgres/redis/kafka",
  "unit: pure unit test, no I/O",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:sqlalchemy",
  "ignore::DeprecationWarning:aiokafka",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ASYNC", "RUF", "TCH"]
ignore = ["E501", "TC002", "TC003"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = true

# -----------------------------------------------------------------------------
# Type checker configuration
# -----------------------------------------------------------------------------
# mypy is the source of truth for type checking. `ty` (Astral's preview
# type checker) is opt-in for IDE feedback only; we don't gate CI on it.
#
# Known `ty` false positives as of ty 0.0.x:
#   1. `add_middleware(...)` rejects valid BaseHTTPMiddleware subclasses
#      because Starlette's stubs use a private _MiddlewareFactory alias
#      that ty doesn't fully resolve.
#   2. `AbuseLayer(redis=...)` rejects concrete Redis / FakeRedis
#      instances even though they structurally satisfy the RedisLike
#      Protocol. ty's Protocol member resolution has a known gap for
#      this pattern.
#
# All suppressions are localized `# type: ignore[invalid-argument-type]`
# comments. When upgrading ty, search for "ty false positive" in this
# file to see if any can be removed.
# -----------------------------------------------------------------------------

[tool.ty.src]
include = ["src"]

[tool.ty.tests]
include = ["tests"]

[[tool.mypy.overrides]]
module = "aiokafka.*"
ignore_missing_imports = true
